fix spacing of multi-paragraph blockquotes

--- a/style/style.scss
+++ b/style/style.scss
@@ -861,10 +861,7 @@ blockquote {
     @include colors(--blockquote-bg-color);
     div {
         margin: 0;
-        padding: .3em 1em .1em 1em;
-        p {
-            margin: .4em 0;
-        }
+        padding: .1em 1em .1em 1em;
         ol, ul {
             margin: .4em 0;
             padding-left: 1.5em;
